// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assistive Text Component base should return an Assistive Text object 1`] = `
.c0 {
  background-color: transparent;
  color: hsl(0,0%,50%);
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  padding: 0 1rem;
}

<div
  className="c0"
  id="assitiveTextIdHelp"
>
  Helper text is here
</div>
`;

exports[`Assistive Text Component base should return an Assistive Text object with danger text color 1`] = `
.c0 {
  color: hsl(4.1,89.6%,58.4%);
  background-color: transparent;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  padding: 0 1rem;
}

<div
  className="c0"
  id="assitiveTextIdError"
>
  Error text is here
</div>
`;
